Fix for overlapping menu items on grid headers

--- a/webprotege-server/src/main/webapp/css/WebProtege.css
+++ b/webprotege-server/src/main/webapp/css/WebProtege.css
@@ -98,6 +98,7 @@
 
     --grid-header--background-color:           #9a9a9a;
     --grid-header--color:                      white;
+    --grid-header--border-radius:              3px;
 }
 
 
